<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/yellow"
    android:padding="30dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:layout_gravity="center">

    </ImageView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_Id"
        android:id="@+id/et_emailId"
        android:textColorHint="@color/dgrey"
        android:textColor="@color/dgrey"
        android:inputType="textEmailAddress"
        android:background="@drawable/et"
        android:layout_marginTop="40dp">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/et_password"
        android:textColorHint="@color/dgrey"
        android:textColor="@color/dgrey"
        android:inputType="textPassword"
        android:background="@drawable/et"
        android:layout_marginTop="20dp">

    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/tv_forgotPassword"
        android:textColor="@color/dgrey"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:layout_gravity="end">
    </TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/bt_login"
        android:textColor="@color/dgrey"
        android:layout_marginTop="20dp">
    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:id="@+id/tv_createAccount"
        android:textColor="@color/dgrey"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:textSize="15sp">
    </TextView>


</LinearLayout>