<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black"
    android:padding="30dp"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_music"
        android:id="@+id/bt_play"
        android:textColor="@color/dgrey"
        android:layout_marginTop="20dp">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause_music"
        android:id="@+id/bt_pause"
        android:textColor="@color/dgrey"
        android:layout_marginTop="20dp">
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_music"
        android:id="@+id/bt_stop"
        android:textColor="@color/dgrey"
        android:layout_marginTop="20dp">
    </Button>


</LinearLayout>